Fix layout on mobile

--- a/src/components/MediaMaker/MediaMaker.module.scss
+++ b/src/components/MediaMaker/MediaMaker.module.scss
@@ -288,3 +288,7 @@
 .error {
   color: var(--color-text-error);
 }
+
+.select select {
+  width: 100%;
+}
